Actions
Bug #6092
closedrtld should always provide assfail/assfail3
Start date:
2015-07-31
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
Since assfail backs the VERIFY*() macros as well as the ASSERT*() macros, rtld should always provide the assfail and assfail3 symbols. Furthermore, the assfail3 format string could use some love (print in hex, and align the fromat string with the argument type).
Updated by Electric Monk over 7 years ago
- Status changed from New to Closed
- % Done changed from 70 to 100
git commit d0dbb2dadfe3fd60aa7440d2deed1161f99e1ae9
commit d0dbb2dadfe3fd60aa7440d2deed1161f99e1ae9 Author: Josef 'Jeff' Sipek <josef.sipek@nexenta.com> Date: 2015-08-06T04:57:37.000Z 6092 rtld should always provide assfail/assfail3 Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Matthew Ahrens <mahrens@delphix.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions