6092 rtld should always provide assfail/assfail3 Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Matthew Ahrens <mahrens@delphix.com> Approved by: Dan McDonald <danmcd@omniti.com>